--- a/CSS/style.css
+++ b/CSS/style.css
@@ -127,7 +127,7 @@ main{
 }
 .player{
     padding: 15px;
-    width: 300px;
+    /* width: 300px; */
     box-shadow: 0px 5.34229px 13.3557px rgba(0, 0, 0, 0.20);
     background-color: #ffffff;
 }
